<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_bottom_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_bottom_home" />

    <item
        android:id="@+id/menu_bottom_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_bottom_search" />

    <item
        android:id="@+id/menu_bottom_like"
        android:enabled="true"
        android:icon="@drawable/ic_like"
        android:title="@string/menu_bottom_like" />

    <item
        android:id="@+id/menu_bottom_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_bottom_history" />

    <item
        android:id="@+id/menu_bottom_setting"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/menu_bottom_setting" />
</menu>