<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgv_address_search_finish"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="배달지 주소 설정"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgv_address_search_back"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            app:srcCompat="@drawable/ic_search_black" />

        <EditText
            android:id="@+id/edt_address_search"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@null"
            android:hint="도로명, 건물명 또는 지번으로 검색"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="70dp"
            android:textColor="@color/darkgrey"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8.0dp"
        android:background="#F8F8F8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_address_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_address_by_search" />

    <TextView
        android:id="@+id/tv_addrress_search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:text="검색 Tip"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_addrress_search_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/address_search_text1"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_addrress_search_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/address_search_text2"
        android:textColor="@color/greyForReview"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_addrress_search_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/address_search_text3"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_addrress_search_text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/address_search_text4"
        android:textColor="@color/greyForReview"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_addrress_search_text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/address_search_text5"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_addrress_search_text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/address_search_text6"
        android:textColor="@color/greyForReview"
        android:textSize="16sp" />

</LinearLayout>