<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp">

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="18dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="20dp"
                    app:srcCompat="@drawable/ic_loca" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_loca"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp">
                </TextView>

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="18dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/ic_arrow_down" />
            </androidx.appcompat.widget.Toolbar>

            <ViewFlipper
                android:id="@+id/flipper_ad"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_food_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_home_food_type"></androidx.recyclerview.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.9dp"
                android:background="#F8F8F8" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_ad_fixed"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.5"
                    android:gravity="center_vertical"
                    android:text="@string/home_franchise"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_franchise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_home_franchise">

            </androidx.recyclerview.widget.RecyclerView>


            <View
                android:layout_width="match_parent"
                android:layout_height="8.0dp"
                android:background="#F8F8F8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/home_choose"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="82dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="9dp"
                        android:background="@drawable/button_option"
                        android:drawableEnd="@drawable/option_arrow_down_loca"
                        android:paddingStart="7dp"
                        android:paddingEnd="10dp"
                        android:stateListAnimator="@null"
                        android:text="@string/home_option_sort"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="9dp"
                        android:background="@drawable/button_option"
                        android:drawableLeft="@drawable/option_cheetah"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:stateListAnimator="@null"
                        android:text="@string/home_option_cheetah"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="82dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="9dp"
                        android:background="@drawable/button_option"
                        android:drawableEnd="@drawable/option_arrow_down_loca"
                        android:paddingStart="7dp"
                        android:paddingEnd="12dp"
                        android:stateListAnimator="@null"
                        android:text="@string/home_option_delivery_fee"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="9dp"
                        android:background="@drawable/button_option"
                        android:drawableEnd="@drawable/option_arrow_down_loca"
                        android:paddingStart="7dp"
                        android:paddingEnd="10dp"
                        android:stateListAnimator="@null"
                        android:text="@string/home_option_minimum_order"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="73dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/button_option"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/home_option_discount_coupon"
                        android:textSize="12sp" />


                </LinearLayout>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_choose_restaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_home_choose_restaurant">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>